--- a/tests/test_marvin_errors/CMakeLists.txt
+++ b/tests/test_marvin_errors/CMakeLists.txt
@@ -4,12 +4,22 @@ add_executable(${TARGET}
 	main.cpp
 )
 
-target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
+target_include_directories(${TARGET} 
+	PUBLIC 
+		../test_helpers ../test_server_client 
+		${MARVIN_INCLUDE_PATHS})
+
+target_precompile_headers(${TARGET} 
+	REUSE_FROM 
+	marvin_library)
+
+target_link_libraries(${TARGET} 
+	PUBLIC marvin_library ${MARVIN_LINK_LIBRARIES})
 
 add_test(${TARGET} ${TARGET})
 
-target_include_directories(${TARGET} PUBLIC ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
-target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
+SET_TESTS_PROPERTIES(${TARGET}
+    PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
 
 set_tests_properties(${TARGET}
     PROPERTIES 
