--- a/tests/test_server_v3/demo1/CMakeLists.txt
+++ b/tests/test_server_v3/demo1/CMakeLists.txt
@@ -7,10 +7,17 @@ add_executable(${TARGET}
 	../handle_app.hpp
 	../server_v3_runner.cpp
 )
-target_include_directories(${TARGET} PUBLIC ./ ./bf ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
-target_compile_features(${TARGET} PRIVATE cxx_std_14)
-target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
-target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
+target_include_directories(${TARGET} 
+	PUBLIC 
+		../test_helpers ../test_server_client 
+		${MARVIN_INCLUDE_PATHS})
+
+target_precompile_headers(${TARGET} 
+	REUSE_FROM 
+	marvin_library)
+
+target_link_libraries(${TARGET} 
+	PUBLIC marvin_library ${MARVIN_LINK_LIBRARIES})
 
 # add_test(${TARGET} ${TARGET})
 # SET_TESTS_PROPERTIES(${TARGET}
