--- a/tests/test_certificates/test_certificates/CMakeLists.txt
+++ b/tests/test_certificates/test_certificates/CMakeLists.txt
@@ -2,16 +2,22 @@ set(TARGET test_certificates)
 add_executable(${TARGET} 
     test_certificates.cpp
 )
-target_include_directories(${TARGET} PUBLIC ./ ../ ${TEST_INCLUDE_DIRS})
-target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
-target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
+target_include_directories(${TARGET} 
+	PUBLIC 
+		../test_helpers ../test_server_client 
+		${MARVIN_INCLUDE_PATHS})
 
-# add_test(
-#     ${TARGET} ${TARGET}
-#     WORKING_DIRECTORY /home/robert/marvin++
-#     )
-# wrap the test in a shell script to set the working directory
-add_test(test_certificates ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${PROJECT_DIR})
+target_precompile_headers(${TARGET} 
+	REUSE_FROM 
+	marvin_library)
+
+target_link_libraries(${TARGET} 
+	PUBLIC marvin_library ${MARVIN_LINK_LIBRARIES})
+
+add_test(${TARGET} ${TARGET})
+SET_TESTS_PROPERTIES(${TARGET}
+    PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
+
 
 set_tests_properties(${TARGET}
     PROPERTIES 
