--- a/tests/test_message_reader/CMakeLists.txt
+++ b/tests/test_message_reader/CMakeLists.txt
@@ -12,11 +12,18 @@ add_executable(${TARGET}
 	# ../test_helpers/test_headers.cpp 
 	# ../test_helpers/test_headers.hpp
 )
-target_include_directories(${TARGET} PUBLIC ./ ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
-target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
-target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
+target_include_directories(${TARGET} 
+	PUBLIC 
+		../test_helpers ../test_server_client 
+		${MARVIN_INCLUDE_PATHS})
 
-add_test(${TARGET} ${TARGET})
+target_precompile_headers(${TARGET} 
+	REUSE_FROM 
+	marvin_library)
+
+target_link_libraries(${TARGET} 
+	PUBLIC marvin_library ${MARVIN_LINK_LIBRARIES})
+
 add_test(${TARGET} ${TARGET})
 SET_TESTS_PROPERTIES(${TARGET}
     PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
