--- a/tests/test_server_v3/manual/CMakeLists.txt
+++ b/tests/test_server_v3/manual/CMakeLists.txt
@@ -14,9 +14,17 @@ target_include_directories(${TARGET} PUBLIC
 	../../test_message_roundtrip 
 	../../test_server_client 
 	${TEST_INCLUDE_DIRS})
-target_compile_features(${TARGET} PRIVATE cxx_std_14)
-target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
-target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
+target_include_directories(${TARGET} 
+	PUBLIC 
+		../test_helpers ../test_server_client 
+		${MARVIN_INCLUDE_PATHS})
+
+target_precompile_headers(${TARGET} 
+	REUSE_FROM 
+	marvin_library)
+
+target_link_libraries(${TARGET} 
+	PUBLIC marvin_library ${MARVIN_LINK_LIBRARIES})
 
 add_test(${TARGET} ${TARGET})
 SET_TESTS_PROPERTIES(${TARGET}
