--- a/tests/test_uri/CMakeLists.txt
+++ b/tests/test_uri/CMakeLists.txt
@@ -4,13 +4,18 @@ add_executable(${TARGET}
 	test_uri_main.cpp
 )
 
-# set_property(TARGET ${TARGET} PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
+target_include_directories(${TARGET} 
+	PUBLIC 
+		../test_helpers ../test_server_client 
+		${MARVIN_INCLUDE_PATHS})
 
-target_include_directories(${TARGET} PUBLIC ./ ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
-target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
-target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
+target_precompile_headers(${TARGET} 
+	REUSE_FROM 
+	marvin_library)
 
-add_test(${TARGET} ${TARGET})
+target_link_libraries(${TARGET} 
+	PUBLIC marvin_library ${MARVIN_LINK_LIBRARIES})
+
 add_test(${TARGET} ${TARGET})
 SET_TESTS_PROPERTIES(${TARGET}
     PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
