--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,10 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "any": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp"
     },
     "workbench.tree.indent": 24
 }
