--- a/apps/simple_proxy/CMakeLists.txt
+++ b/apps/simple_proxy/CMakeLists.txt
@@ -13,3 +13,12 @@ target_link_libraries(simple_proxy PUBLIC ${MARVIN_LINK_LIBRARIES})
 # 	REUSE_FROM 
 # 	marvin_library)
 
+add_executable(simple_proxy_cli 
+	simple_proxy_cli.cpp
+
+)
+
+target_include_directories(simple_proxy_cli 
+	PUBLIC SYSTEM ${MARVIN_INCLUDE_PATHS})
+
+target_link_libraries(simple_proxy_cli PUBLIC ${MARVIN_LINK_LIBRARIES})
