--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,20 +22,22 @@ add_subdirectory(test_buffers)
 add_subdirectory(test_certificates)
 add_subdirectory(test_headers)
 add_subdirectory(test_marvin_errors)
+
 add_subdirectory(test_message)
-add_subdirectory(test_message_reader)
-add_subdirectory(test_message_roundtrip)
-add_subdirectory(test_proxy_manual)
-add_subdirectory(test_run_shell) # demonstrates how to use a shell script as the test
+# add_subdirectory(test_message_reader)
+# add_subdirectory(test_message_roundtrip)
+# add_subdirectory(test_proxy_manual)
+# add_subdirectory(test_run_shell) # demonstrates how to use a shell script as the test
+
 # need to get these two working and decide which tests need these dependencies
 # add_subdirectory(test_server_setup_fixture)
 # add_subdirectory(test_server_cleanup_fixture)
 
-add_subdirectory(test_server_v3)
+# add_subdirectory(test_server_v3)
 # add_subdirectory(test_ssl)		# not sure this one will stay
-add_subdirectory(test_timeout)
-add_subdirectory(test_uri)
-add_subdirectory(test_subcommands)
+# add_subdirectory(test_timeout)
+# add_subdirectory(test_uri)
+# add_subdirectory(test_subcommands)
 
 if (OFF)
 endif()
