save before major edit - this version is not compiling so not a good fall back except if the pending edit produces a mess

--- a/tests/test_buffers/CMakeLists.txt
+++ b/tests/test_buffers/CMakeLists.txt
@@ -5,8 +5,6 @@ add_executable(${TARGET}
 	test_main.cpp
 )
 
-# set_property(TARGET ${TARGET} PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
-
 target_include_directories(${TARGET} 
 	PUBLIC 
 		../test_helpers ../test_server_client 
@@ -24,12 +22,24 @@ SET_TESTS_PROPERTIES(${TARGET}
     PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
 
 
-# set_tests_properties(${TARGET}
-# 	PROPERTIES
-# 	PASS_REGULAR_EXPRESSION "Test passed")
-# set_tests_properties(${TARGET}
-# 	PROPERTIES
-# 	FAIL_REGULAR_EXPRESSION "(Exception|Test failed)")
-# set_tests_properties(${TARGET}
-# 	PROPERTIES
-# 	TIMEOUT 120)
+
+set(TARGET_T test_buffer_template)
+add_executable(${TARGET_T}
+		test_buffer_template.cpp
+		)
+
+target_include_directories(${TARGET_T}
+		PUBLIC
+		../test_helpers ../test_server_client
+		${MARVIN_INCLUDE_PATHS})
+
+target_precompile_headers(${TARGET_T}
+		REUSE_FROM
+		marvin_library)
+
+target_link_libraries(${TARGET_T}
+		PUBLIC marvin_library ${MARVIN_LINK_LIBRARIES})
+
+add_test(${TARGET_T} ${TARGET_T})
+SET_TESTS_PROPERTIES(${TARGET_T}
+		PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
